# flameguard-tower-defense

./: .gitignore  CMakeLists.txt  README.md  game_manager.h  main.cpp  manager.h  tile.h
config/: config.json  level.json
include/: animation.h  coin_prop.h  facing.h  map.h  route.h  timer.h  wave.h
include/bullet/: arrow_bullet.h  axe_bullet.h  bullet.h  bullet_type.h  shell_bullet.h
include/enemy/: enemy.h  enemy_type.h  goblin_enemy.h  goblin_priest_enemy.h  king_slim_enemy.h  skeleton_enemy.h  slim_enemy.h
include/game_map/: map.h  route.h  tile.h  vector2.h  wave.h
include/manager/: bullet_manager.h  coin_manager.h  config_manager.h  enemy_manager.h  game_manager.h  home_manager.h  player_manager.h  resources_manager.h  tower_manager.h  wave_manager.h
include/tower/: archer_tower.h  axeman_tower.h  gunner_tower.h  tower.h  tower_type.h
include/ui/: banner.h  status_bar.h
include/ui/panel/: panel.h  place_panel.h  upgrade_panel.h
src/: main.cpp
